--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.13.1",
+    "@mui/material": "^5.10.10",
+    "babel-plugin-styled-components": "^2.0.7",
+    "gatsby": "^4.24.4",
+    "gatsby-material-ui-components": "^5.3.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-styled-components": "^5.24.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.6"
   }
 }
